fix alignment

--- a/app/assets/stylesheets/sponsorships.css
+++ b/app/assets/stylesheets/sponsorships.css
@@ -158,8 +158,8 @@
 }
 
 .sponsor-image {
-    width: 60px;
-    height: 60px;
+    width: 130px;
+    height: 130px;
     border-radius: 50%;
     margin-right: 10px;
     object-fit: cover; /* Ensures image covers the circle properly */
@@ -220,6 +220,7 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 20px;
+    padding: 20px;
 }
 
 .donation-icon, .contribution-icon {
